--- a/video_2996.html
+++ b/video_2996.html
@@ -86,7 +86,7 @@ $(document).ready(function(){
 
   <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
 
-    <h1>Video</h1>
+    <h1>Videos</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -98,7 +98,7 @@ $(document).ready(function(){
 
   <a href="index.html" class="refresh_link ui-link ui-btn-left ui-btn ui-shadow ui-corner-all" data-role="button" rel="external" data-ajax="false" role="button"><img alt="home icon" src="images/home_icon.png"></a>
 
-    <h1>Video</h1>
+    <h1>Videos</h1>
 
     <a class="help_link ui-link ui-btn-right ui-btn ui-shadow ui-corner-all" data-role="button" role="button"><img alt="help icon" src="images/help_icon.png"></a> </div>
 
@@ -114,7 +114,313 @@ $(document).ready(function(){
 
 	
 
-			<p>No video upload</p>
+			<ul data-role="listview">
+
+    </li></li></li></li><li><a href='http://www.youtube.com/watch?v=lz1-1Q8Gync'><img src='https://i1.ytimg.com/vi/lz1-1Q8Gync/hqdefault.jpg'  /><h2>Yaariyan Love Me Thoda Aur Full Video Song | Arijit Singh | Himansh Kohli, Rakul Preet</h2><p>Enjoy the "Love Me Thoda Aur" full video song from movie "Yaariyan" starring  Himansh Kohli, Evelyn Sharma, Serah Singh, Dev Sharma, Rakul Preet Singh, Nicole Faria, Shreyas Pardiwalla, The movie is directed by Divya Khosla Kumar and produced by Bhushan Kumar, Krishan Kumar.
+
+Buy Yaariyan Songs from iTunes : https://itunes.apple.com/us/album/yaariyan-original-motion-picture/id775962494?ls=1
+
+Song: LOVE ME THODA AUR
+Movie: YAARIYAN
+Singer: ARIJIT SINGH
+Music: PRITAM
+Lyrics: IRSHAD KAMIL
+Music Label: T-SERIES
+Mixed and Mastered: ERIC PILLIAI ( Future Sound Of Bombay)
+Set Love Me Thoda Aur (Shayaron Se) as your callertune - SMS YAAR16 to 54646
+Set Love Me Thoda Aur (Milta Tumse Hoon) as your callertune - SMS YAAR17 to 54646
+
+Enjoy and stay connected with us!!
+
+SUBSCRIBE T-Series channel for unlimited entertainment
+http://www.youtube.com/tseries
+
+Circle us on G+ 
+http://www.google.com/+tseriesmusic
+
+Like us on Facebook
+http://www.facebook.com/tseriesmusic
+
+Follow us on
+http://www.twitter.com/tseries
+
+Find us on
+http://pinterest.com/tseries</p></a><li><a href='http://www.youtube.com/watch?v=MXJCnccDLA0'><img src='https://i1.ytimg.com/vi/MXJCnccDLA0/hqdefault.jpg'  /><h2>"Sunny Sunny Yaariyan" Full Video Song (Film Version) | Himansh Kohli, Rakul Preet</h2><p>Presenting "Sunny Sunny" full video song from YAARIYAN movie starring Himansh Kohli,Rakul Preet, Evelyn Sharma, Serah Singh, Dev Sharma, Nicole Faria, Shreyas Pardiwalla. 
+
+Buy Yaariyan Songs from iTunes : https://itunes.apple.com/us/album/yaariyan-original-motion-picture/id775962494?ls=1
+
+Song: SUNNY SUNNY
+Singer: YO YO HONEY SINGH, NEHA KAKKAR
+Music: YO YO HONEY SINGH
+Lyrics: YO YO HONEY SINGH
+Movie: YAARIYAN
+Music Label: T-SERIES
+Mixed and Mastered: VINOD VERMA 
+
+Enjoy and stay connected with us!!
+
+SUBSCRIBE T-Series channel for unlimited entertainment
+http://www.youtube.com/tseries
+
+Circle us on G+ 
+http://www.google.com/+tseriesmusic
+
+Like us on Facebook
+http://www.facebook.com/tseriesmusic
+
+Follow us on
+http://www.twitter.com/tseries
+
+
+------------------------------------------------------------------------------------------------
+
+Set SUNNY SUNNY as your callertune - SMS YAAR9 to 54646
+Sunny Sunny (Malibu Shot - Yo Yo) - SMS YAAR10 to 54646
+Sunny Sunny (Female) - SMS YAAR11 to 54646
+Sunny Sunny (Sunset) - SMS YAAR12 to 54646
+
+Sunny Sunny - Aaj Blue Hai Paani - Yo Yo:
+
+Vodafone Subscribers Dial 5373877897
+Airtel Subscribers Dial 5432112986485
+Reliance Subscribers Dial 595014566
+Idea Subscribers Dial 567893877897
+Tata DoCoMo Subscribers Dial 59090446365
+Aircel Subscribers SMS DT 2110706&Acirc;&nbsp; To 53000
+Tata Indicom Subscribers SMS WT1226714 To12800
+BSNL (South / East) Subscribers SMS 3877897 To 56700
+BSNL (South / East) Subscribers SMS 2110706 To 56700
+Virgin Subscribers SMS TT 3877897 To 58475
+MTS Subscribers Dial 52222628455
+Uninor Subscribers Dial 522226138257
+MTNL Subscribers SMS  To 56789PT 3877897
+
+Sunny Sunny - Malibu Shot - Yo Yo:
+
+Vodafone Subscribers Dial 5373877920
+Airtel Subscribers Dial 5432112986462
+Reliance Subscribers Dial 595014543
+Idea Subscribers Dial 567893877920
+Tata DoCoMo Subscribers Dial 59090446342
+Aircel Subscribers SMS DT 2110729&Acirc;&nbsp; To 53000
+Tata Indicom Subscribers SMS WT1226691 To12800
+BSNL (South / East) Subscribers SMS 3877920 To 56700
+BSNL (South / East) Subscribers SMS 2110729 To 56700
+Virgin Subscribers SMS TT 3877920 To 58475
+MTS Subscribers Dial 52222628432
+Uninor Subscribers Dial 522226138234
+MTNL Subscribers SMS  To 56789PT 3877920
+
+Sunny Sunny - Female:
+
+Vodafone Subscribers Dial 5373877927
+Airtel Subscribers Dial 5432112986455
+Reliance Subscribers Dial 595014536
+Idea Subscribers Dial 567893877927
+Tata DoCoMo Subscribers Dial 59090446335
+Aircel Subscribers SMS DT 2110719&Acirc;&nbsp; To 53000
+Tata Indicom Subscribers SMS WT1226684 To12800
+BSNL (South / East) Subscribers SMS 3877927 To 56700
+BSNL (South / East) Subscribers SMS 2110719 To 56700
+Virgin Subscribers SMS TT 3877927 To 58475
+MTS Subscribers Dial 52222628425
+Uninor Subscribers Dial 522226138227
+MTNL Subscribers SMS  To 56789PT 3877927
+
+Sunny Sunny - Sunset:
+
+Vodafone Subscribers Dial 5373877898
+Airtel Subscribers Dial 5432112986484
+Reliance Subscribers Dial 595014565
+Idea Subscribers Dial 567893877898
+Tata DoCoMo Subscribers Dial 59090446364
+Aircel Subscribers SMS DT 2110702&Acirc;&nbsp; To 53000
+Tata Indicom Subscribers SMS WT1226713 To12800
+BSNL (South / East) Subscribers SMS 3877898 To 56700
+BSNL (South / East) Subscribers SMS 2110702 To 56700
+Virgin Subscribers SMS TT 3877898 To 58475
+MTS Subscribers Dial 52222628454
+Uninor Subscribers Dial 522226138256
+MTNL Subscribers SMS  To 56789PT 3877898</p></a><li><a href='http://www.youtube.com/watch?v=Qvd-I7lTecI'><img src='https://i1.ytimg.com/vi/Qvd-I7lTecI/hqdefault.jpg'  /><h2>Baarish Yaariyan Full Video Song (Official) | Himansh Kohli, Rakul Preet</h2><p>Presenting the most anticipated song "Iss Ddarde Dil Ki Sifarish" "(Baarish)"  from movie Yaariyan starring Himansh Kohli, Rakul Preet, Evelyn Sharma, Serah Singh, Dev Sharma,  Nicole Faria, Shreyas Pardiwalla, The movie is directed by Divya Khosla Kumar, produced by Bhushan Kumar
+
+The song is in voice of Mohd. Irfan and Gajendra Verma while lyrics and music are composed by Mithoon.
+
+Buy Yaariyan Songs from iTunes : https://itunes.apple.com/us/album/yaariyan-original-motion-picture/id775962494?ls=1
+
+ABCD Feat. YO YO HONEY SINGH Video - http://youtu.be/6kInfR_r5Vc
+
+Song: BAARISH YAARIYAN
+Singer: MOHAMMED IRFAN, ADDITIONAL VOCAL: GAJENDRA VERMA
+Music: MITHOON
+Lyrics: MITHOON
+Movie: YAARIYAN
+Music Label: T-SERIES
+Mixed and Mastered: ERIC PILLIAI ( Future Sound Of Bombay)
+Movie Releasing: 10 Jan 2014
+
+Enjoy and stay connected with us!!
+
+SUBSCRIBE T-Series channel for unlimited entertainment
+http://www.youtube.com/tseries
+
+Circle us on G+ 
+http://www.google.com/+tseriesmusic
+
+Like us on Facebook
+http://www.facebook.com/tseriesmusic
+
+Follow us on
+http://www.twitter.com/Tseries
+
+Find us on
+http://pinterest.com/tseries
+
+------------------------------------------------------------------------------
+
+Set BAARISH as your callertune - SMS YAAR4 to 54646
+Baarish Yaariyan (Milne Ko) - SMS YAAR5 to 54646
+Baarish Yaariyan (Dhadkan) - SMS YAAR6 to 54646
+Baarish Yaariyan (Tu Jo Mila) - SMS YAAR7 to 54646
+Baarish Yaariyan (Dil Mera ) - SMS YAAR8 to 54646
+
+Operator Codes:
+1. Baarish Yaariyan:
+
+Vodafone Subscribers Dial 5373864262
+Airtel Subscribers Dial 5432112978399
+Reliance Subscribers Dial 595014440
+Idea Subscribers Dial 567893864262
+Tata DoCoMo Subscribers Dial 59090446326
+Aircel Subscribers SMS DT 2108190&Acirc;&nbsp; To 53000
+Tata Indicom Subscribers SMS WT1224642 To12800
+BSNL (South / East) Subscribers SMS 3864262 To 56700
+BSNL (South / East) Subscribers SMS 2108190 To 56700
+Virgin Subscribers SMS TT 3864262 To 58475
+MTS Subscribers Dial 52222628416
+Uninor Subscribers Dial 522226138263
+MTNL Subscribers SMS  To 56789PT 3864262
+
+2. Baarish Yaariyan - Milne Ko:
+
+Vodafone Subscribers Dial 5373864265
+Airtel Subscribers Dial 5432112978402
+Reliance Subscribers Dial 595014443
+Idea Subscribers Dial 567893864265
+Tata DoCoMo Subscribers Dial 59090446329
+Aircel Subscribers SMS DT 2108193&Acirc;&nbsp; To 53000
+Tata Indicom Subscribers SMS WT1224645 To12800
+BSNL (South / East) Subscribers SMS 3864265 To 56700
+BSNL (South / East) Subscribers SMS 2108193 To 56700
+Virgin Subscribers SMS TT 3864265 To 58475
+MTS Subscribers Dial 52222628419
+Uninor Subscribers Dial 522226138266
+MTNL Subscribers SMS  To 56789PT 3864265
+
+3. Baarish Yaariyan - Dhadkan: 
+
+Vodafone Subscribers Dial 5373864263
+Airtel Subscribers Dial 5432112978400
+Reliance Subscribers Dial 595014441
+Idea Subscribers Dial 567893864263
+Tata DoCoMo Subscribers Dial 59090446327
+Aircel Subscribers SMS DT 2108191&Acirc;&nbsp; To 53000
+Tata Indicom Subscribers SMS WT1224643 To12800
+BSNL (South / East) Subscribers SMS 3864263 To 56700
+BSNL (South / East) Subscribers SMS 2108191 To 56700
+Virgin Subscribers SMS TT 3864263 To 58475
+MTS Subscribers Dial 52222628417
+Uninor Subscribers Dial 522226138264
+MTNL Subscribers SMS  To 56789PT 3864263
+
+4. Baarish Yaariyan - Tu Jo Mila:
+
+Vodafone Subscribers Dial 5373864267
+Airtel Subscribers Dial 5432112978404
+Reliance Subscribers Dial 595014445
+Idea Subscribers Dial 567893864267
+Tata DoCoMo Subscribers Dial 59090446331
+Aircel Subscribers SMS DT 2108195&Acirc;&nbsp; To 53000
+Tata Indicom Subscribers SMS WT1224647 To12800
+BSNL (South / East) Subscribers SMS 3864267 To 56700
+BSNL (South / East) Subscribers SMS 2108195 To 56700
+Virgin Subscribers SMS TT 3864267 To 58475
+MTS Subscribers Dial 52222628421
+Uninor Subscribers Dial 522226138267
+MTNL Subscribers SMS  To 56789PT 3864267
+
+5. Baarish Yaariyan - Dil Mera:
+
+Vodafone Subscribers Dial 5373864264
+Airtel Subscribers Dial 5432112978401
+Reliance Subscribers Dial 595014442
+Idea Subscribers Dial 567893864264
+Tata DoCoMo Subscribers Dial 59090446328
+Aircel Subscribers SMS DT 2108192&Acirc;&nbsp; To 53000
+Tata Indicom Subscribers SMS WT1224644 To12800
+BSNL (South / East) Subscribers SMS 3864264 To 56700
+BSNL (South / East) Subscribers SMS 2108192 To 56700
+Virgin Subscribers SMS TT 3864264 To 58475
+MTS Subscribers Dial 52222628418
+Uninor Subscribers Dial 522226138265
+MTNL Subscribers SMS  To 56789PT 3864264
+
+
+
+------------------------------------
+"barish yaariyan" "barish mithoon" "barish song 2013' "iss darde dil ki sifarish song" "barish yariyan song"</p></a><li><a href='http://www.youtube.com/watch?v=-8SlOkUAW-4'><img src='https://i1.ytimg.com/vi/-8SlOkUAW-4/hqdefault.jpg'  /><h2>testnewadded</h2><p>Release Date: 14th February 2014
+&acirc;&#150;&ordm; Buy from iTunes: http://goo.gl/TS5d2R
+&acirc;&#150;&ordm; Own The Music of "Gunday" Now - http://goo.gl/wbUbEj
+
+Starring: Ranveer Singh, Arjun Kapoor, Priyanka Chopra & Irrfan Khan
+Written & Directed by: Ali Abbas Zafar
+Produced by: Aditya Chopra
+Director of Photography: Aseem Mishra
+Music: Sohail Sen
+Lyrics: Irshad Kamil
+Executive Producer: Aashish Singh
+Editor: Rameshwar S. Bhagat
+Production Designer: Rajat Poddar
+Sound: Dileep Subramanium
+Action Director: Sham Kaushal
+Director of Choreography: Bosco-Caesar
+Costume Designer: Subarna Ray Chaudhuri
+Additional Dialogues: Sanjay Masoom
+Background Score: Julius Packiam
+Line Producer: Padam Bhushan
+Casting Director: Shanoo Sharma
+1st Assistant Director: Tanmay Mohan
+Publicity Design: Fayyaz Badruddin (YRF - Design Cell)
+Stills: Zahir Abbas Khan
+Music on: YRF Music
+
+&acirc;&#150;&ordm; Subscribe to yrf http://goo.gl/Y4p3k 
+&acirc;&#150;&ordm; Like us on Facebook https://www.facebook.com/GundayTheFilm
+&acirc;&#150;&ordm; Follow us on Twitter https://twitter.com/GundayTheFilm
+&acirc;&#150;&ordm; Circle us on YRF G+ https://plus.google.com/+yrf
+&acirc;&#150;&ordm; Follow us on Instagram http://instagram.com/yrf
+&acirc;&#150;&ordm; Follow us on Pinterest http://pinterest.com/yrf
+
+
+When they ran to save their lives for the first time, they were mere 12-year-old boys, and the world called them 'refugees'.
+
+The war of 1971 gave birth to a new country - Bangladesh. It also gave birth to two young orphans - Bikram and Bala. They witnessed the war and its aftermath, where the world tried to trample over them. Fighting for survival, they clung to each other and escaped to Calcutta.
+
+Before they knew the world, they knew each other. Such was their bond, such was their friendship.
+
+Each time they sought new beginnings, each time they would rise, the world would crush them down. So, they fought again... and again. Together they were unbeatable. They were unstoppable. They were inseparable.
+
+In the years that passed, Bikram and Bala, became Calcutta's most loved, most celebrated, most reckless, most fearless and most powerful GUNDAY!
+
+They had everything... then, one fine day, bells rang...
+
+Nandita, the most beautiful cabaret dancer, walked into their lives, and they lost everything to her. Their murky world turned magical and colourful. They fell head over heels in love with her.
+
+But that was only a blissful lull before an impending storm...
+
+And then entered ACP Satyajeet Sarkar, the right for every wrong, a law for every outlaw and a counter force for Bikram and Bala.
+
+What follows from here is the most sensational-most thrilling-most dramatic story ever told!</p></a></ul>
+
 
             
 
