--- a/staticpage_2994.html
+++ b/staticpage_2994.html
@@ -68,7 +68,7 @@ img {
 
   <!-- Header Starts Here -->
 
-  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
+  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
 
     <h1>Static Page</h1>
 
@@ -80,13 +80,20 @@ img {
 
   
 
-  <div class="staticPage">
+  <div class="staticPageList">
+<ul data-role="listview" >
+	 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_2994_570.html">
+                
+                <h2>
+                page_one                </h2>
+                <p><p style="text-align: justify; line-height: 19.200000762939453px; color: rg</p>
+                
+            </a></li>
+	
+	
+</ul>
+</div>
 
-  
-
-  <p>No Static page content </p>
-
-  </div>
 
   
 
