--- a/staticpage_2994.html
+++ b/staticpage_2994.html
@@ -82,7 +82,15 @@ img {
 
   <div class="staticPageList">
 <ul data-role="listview" >
-
+	 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_2994_572.html">
+                
+                <h2>
+                page_one                </h2>
+                <p><h3 style="margin-top: 20px; font-size: 16px; font-weight: normal; color: r</p>
+                
+            </a></li>
+	
+	
 </ul>
 </div>
 
