--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ img {
 						</td>
 						<td>
 							<a href="staticpage_2994.html" rel="external" data-ajax="flase" >
-								<label>StaticPage</label>
+								<label>multiple pages</label>
 							</a>
 						</td>
 					</tr>
