--- a/staticpage_3000_582.html
+++ b/staticpage_3000_582.html
@@ -68,9 +68,9 @@ img {
 
   <!-- Header Starts Here -->
 
-  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
+  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
 
-    <h1>multi page</h1>
+    <h1>page one</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -80,20 +80,13 @@ img {
 
   
 
-  <div class="staticPageList">
-<ul data-role="listview" >
-	 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_3000_582.html">
-                
-                <h2>
-                page one                </h2>
-                <p><div><br></div><div>hello test&nbsp;</div><div><br></div><div>test that pat</p>
-                
-            </a></li>
-	
-	
-</ul>
-</div>
+  <div class="staticPage">
 
+  
+
+  <div><br></div><div>hello test&nbsp;</div><div><br></div><div>test that pat of functionlity&nbsp;</div><div><br></div><div>soem . sort of adress _points are ksdhlak</div><div><br></div><div>df</div>
+
+  </div>
 
   
 
